# z3-wolfram

./: CHANGELOG.md  CMakeLists.txt  HowToBuild.md  README.md
Tests/: Examples.nb  Tests.nb
Z3/: PacletInfo.wl.in
Z3/Kernel/: Display.wl  Library.wl  Utils.wl  Z3.wl
cpp/include/: API.h  utils.h
cpp/src/lib/: API.c  utils.c
